# wiener

./: Makefile  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
examples/: main.py
tests/: test_example.py
wiener/loader/: load.py
wiener/plugins/foobar/: plugin.py
wiener/plugins/metadata/: __init__.py  metadata.py  plugin.py
wiener/plugins/tags/: __init__.py  plugin.py  testcase.py
